--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "run-script-webpack-plugin": "^0.2.0",
     "rxjs": "^7.2.0",
     "webpack": "^5.88.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "yaml": "^2.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
