--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@nestjs/swagger": "^7.0.12",
     "cross-env": "^7.0.3",
     "fastify": "^4.19.1",
+    "mongoose": "^7.3.1",
+    "mysql2": "^3.4.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "run-script-webpack-plugin": "^0.2.0",
     "rxjs": "^7.2.0",
+    "typeorm": "^0.3.17",
     "webpack": "^5.88.1",
     "webpack-node-externals": "^3.0.0",
     "yaml": "^2.3.1"
