--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.2.1",
     "@nestjs/swagger": "^7.0.12",
+    "@nestjs/typeorm": "^10.0.0",
     "cross-env": "^7.0.3",
     "fastify": "^4.19.1",
     "mongoose": "^7.3.1",
